--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/demo1/demo1",
+    "pages/demo2/demo2",
+    "pages/demo3/demo3"
   ],
   "window":{
     "backgroundTextStyle":"light",
